RESOLVED FIXED85056
[Qt] Doesn't build with ENABLE_INSPECTOR=0
https://bugs.webkit.org/show_bug.cgi?id=85056
Summary [Qt] Doesn't build with ENABLE_INSPECTOR=0
Allan Sandfeld Jensen
Reported 2012-04-27 06:00:48 PDT
Build fails if we deactivate the inspector code, not something that is done by default, but easy to fix.
Attachments
Patch (2.85 KB, patch)
2012-04-27 06:03 PDT, Allan Sandfeld Jensen
no flags
Patch (5.90 KB, patch)
2012-04-27 06:24 PDT, Allan Sandfeld Jensen
no flags
Patch (6.63 KB, patch)
2012-05-14 05:53 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2012-04-27 06:03:25 PDT
Allan Sandfeld Jensen
Comment 2 2012-04-27 06:19:44 PDT
Comment on attachment 139181 [details] Patch Missing changes
Allan Sandfeld Jensen
Comment 3 2012-04-27 06:24:16 PDT
Early Warning System Bot
Comment 4 2012-04-27 07:00:36 PDT
Allan Sandfeld Jensen
Comment 5 2012-05-14 05:53:16 PDT
Created attachment 141703 [details] Patch Patch for landing
WebKit Review Bot
Comment 6 2012-05-14 07:01:04 PDT
Comment on attachment 141703 [details] Patch Clearing flags on attachment: 141703 Committed r116944: <http://trac.webkit.org/changeset/116944>
WebKit Review Bot
Comment 7 2012-05-14 07:01:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.