[Qt] Doesn't build with ENABLE_INSPECTOR=0 https://bugs.webkit.org/show_bug.cgi?id=85056

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-05-14
Reviewed by Tor Arne Vestbø.

Source/WebKit2:

* Target.pri:
* UIProcess/qt/QtWebContext.cpp:
(WebKit::initInspectorServer):

Tools:

* WebKitTestRunner/TestInvocation.cpp: Ifdef otherwise unused static function.
* qmake/mkspecs/features/features.prf:
* qmake/mkspecs/features/features.pri:

Canonical link: https://commits.webkit.org/103941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116944 268f45cc-cd09-0410-ab3c-d52691b4dbfc