Source/WebKit2/Target.pri
@@ -208,11 +208,6 @@ HEADERS += \
     UIProcess/GenericCallback.h \
     UIProcess/GeolocationPermissionRequestManagerProxy.h \
     UIProcess/GeolocationPermissionRequestProxy.h \
-    UIProcess/InspectorServer/WebInspectorServer.h \
-    UIProcess/InspectorServer/WebSocketServer.h \
-    UIProcess/InspectorServer/WebSocketServerClient.h \
-    UIProcess/InspectorServer/WebSocketServerConnection.h \
-    UIProcess/InspectorServer/qt/WebSocketServerQt.h \
     UIProcess/Launcher/ProcessLauncher.h \
     UIProcess/Launcher/ThreadLauncher.h \
     UIProcess/LayerTreeHostProxy.h \
@@ -554,11 +549,6 @@ SOURCES += \
     UIProcess/FindIndicator.cpp \
     UIProcess/GeolocationPermissionRequestManagerProxy.cpp \
     UIProcess/GeolocationPermissionRequestProxy.cpp \
-    UIProcess/InspectorServer/WebInspectorServer.cpp \
-    UIProcess/InspectorServer/WebSocketServer.cpp \
-    UIProcess/InspectorServer/WebSocketServerConnection.cpp \
-    UIProcess/InspectorServer/qt/WebInspectorServerQt.cpp \
-    UIProcess/InspectorServer/qt/WebSocketServerQt.cpp \
     UIProcess/Launcher/ProcessLauncher.cpp \
     UIProcess/Launcher/ThreadLauncher.cpp \
     UIProcess/Launcher/qt/ProcessLauncherQt.cpp \
@@ -780,6 +770,22 @@ mac: {
         Platform/CoreIPC/unix/ConnectionUnix.cpp \
         Platform/qt/WorkQueueQt.cpp \
         Platform/unix/SharedMemoryUnix.cpp
+}
+
+contains(DEFINES, ENABLE_INSPECTOR_SERVER=1) {
+    HEADERS += \
+        UIProcess/InspectorServer/WebInspectorServer.h \
+        UIProcess/InspectorServer/WebSocketServer.h \
+        UIProcess/InspectorServer/WebSocketServerClient.h \
+        UIProcess/InspectorServer/WebSocketServerConnection.h \
+        UIProcess/InspectorServer/qt/WebSocketServerQt.h
+
+    SOURCES += \
+        UIProcess/InspectorServer/WebInspectorServer.cpp \
+        UIProcess/InspectorServer/WebSocketServer.cpp \
+        UIProcess/InspectorServer/WebSocketServerConnection.cpp \
+        UIProcess/InspectorServer/qt/WebInspectorServerQt.cpp \
+        UIProcess/InspectorServer/qt/WebSocketServerQt.cpp
 }
 
 contains(DEFINES, ENABLE_TOUCH_EVENTS=1) {
